--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ TypeForFun/build/classes/.netbeans_automatic_build
 TypeForFun/build/classes/.netbeans_update_resources
 TypeForFun/nbproject/private/private.properties
 *.properties
+/TypeForFun/JavaApplication3/nbproject/private/
